2012-12-17  Hammer Attila <hammera@pickup.hu>

	* tests/harnessSources/hu-hu-g1_harness_source.txt:
	* tests/harnessSources/hu-hu-g1-hyph_harness_source.txt:
	* tests/harness/hu-hu-g1_harness.txt:
	* tests/harness/hu-hu-g1-hyph_harness.txt:
	* tables/hu-exceptionwords.cti: Bug fix and tests for the
	Hungarian grade 1 table.

2012-12-14  Christian Egli  <christian.egli@sbs.ch>

	* tests/typeform.c: Added a comment about the purpose of this
	file, as it isn't really a test

	* tests/brl_checks.h:
	* tests/brl_checks.c (convert_typeform): Add the new function to
	the header file.

2012-12-13  Christian Egli  <christian.egli@sbs.ch>

	* tests/typeform.c:
	* tests/en_gb_g1_italics.c:
	* tests/brl_checks.c:
	* liblouis/compileTranslationTable.c: Fix compiler warnings, like
	unused variables, macro redefinition, comparison between signed
	and unsigned integer expressions, etc.

	* configure.ac:
	* NEWS: Update for release 2.5.2

2012-12-13  Paul Wood <paulw.torchtrust@gmail.com>

	* tables/en-GB-g2.ctb: Fix a regression with the 'com'
	contraction.

2012-12-10  Christian Egli  <christian.egli@sbs.ch>

	* tables/ukchardefs.cti: Fixes provided by Paul Paul Wood.

2012-12-07  Paul Wood <paulw.torchtrust@gmail.com>

	* tables/en-GB-g2.ctb: Corrections to the g2 table.

2012-12-06  Christian Egli  <christian.egli@sbs.ch>

	* tables/ko.ctb:
	* tables/Makefile.am (table_files): Add a table for Korean
	provided by Joseph Lee <joseph.lee22590@gmail.com>

2012-12-04  Christian Egli  <christian.egli@sbs.ch>

	* liblouis/Makefile.am (AM_ETAGSFLAGS): The langmap option only
	works if you use ctags. Newer versions of etags (i.e. emacs 24 and
	up) seem to generate proper TAGS files even for *.ci files, so
	this option can be removed.

2012-12-03  Christian Egli  <christian.egli@sbs.ch>

	* liblouis/lou_translateString.c (lou_dotsToChar): Fix some
	valgrind warnings about invalid reads, i.e. do some array bound
	checking.

2012-12-03  Joseph Lee <joseph.lee22590@gmail.com>
