@@ -1,3 +1,9 @@
+2012-12-17  Christian Egli  <christian.egli@sbs.ch>
+
+	* liblouis/lou_translateString.c (checkMultCaps):
+	(noCompbrlAhead): Fix the valgrind warnings properly without
+	adding a regression.
+
 2012-12-17  Hammer Attila <hammera@pickup.hu>
 
 	* tests/harnessSources/hu-hu-g1_harness_source.txt:
